# prognet_messages

./: Dockerfile  pyproject.toml
_root/: init_db.py  main.py
_root/config/: messages.yaml  messages_local.yaml
messages/: app.py  models.py  routes.py  views.py
